# kassi

./: .gitignore  .golangci.yml  .mockery.yaml  Cargo.toml  Makefile  README.txt  diesel.toml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/kassi/: main.go  migrate.go  serve.go
crates/kassi-db/: Cargo.toml
crates/kassi-db/migrations/: 001_create_networks.sql  002_create_merchants.sql  003_create_merchant_configs.sql  004_create_settlement_destinations.sql  005_create_signers.sql  006_create_assets.sql  007_create_deposit_addresses.sql  008_create_network_addresses.sql  009_create_payment_intents.sql  010_create_quotes.sql  011_create_ledger_entries.sql  012_create_webhook_deliveries.sql  013_create_price_cache.sql  014_create_jobs.sql
crates/kassi-db/migrations/2026-03-08-141825_initial_schema/: down.sql  up.sql
crates/kassi-db/src/: lib.rs  models.rs  queries.rs  schema.rs
crates/kassi-jobs/: Cargo.toml
crates/kassi-jobs/src/: error.rs  job.rs  lib.rs  worker.rs
crates/kassi-server/: Cargo.toml
crates/kassi-server/src/: config.rs  errors.rs  extractors.rs  lib.rs  main.rs  prices.rs  response.rs
crates/kassi-server/src/routes/: admin.rs  assets.rs  auth.rs  deposit_addresses.rs  health.rs  internal.rs  merchants.rs  mod.rs  payment_intents.rs  prices.rs  refunds.rs  settlement_destinations.rs  shared.rs  webhooks.rs
crates/kassi-server/tests/: admin.rs  assets.rs  auth.rs  deposit_addresses.rs  internal.rs  merchants.rs  payment_intents.rs  prices.rs  refunds.rs  server.rs  settlement_destinations.rs  webhooks.rs
crates/kassi-server/tests/common/: mod.rs
crates/kassi-signer/: Cargo.toml
crates/kassi-signer/src/: derivation.rs  evm.rs  infisical.rs  lib.rs  mock.rs  solana.rs  vault.rs
crates/kassi-tokens/: Cargo.toml
crates/kassi-tokens/src/: fee.rs  lib.rs  pricing.rs
crates/kassi-types/: Cargo.toml
crates/kassi-types/src/: caip.rs  id.rs  lib.rs
internal/api/: middleware.go  middleware_test.go  server.go
internal/api/handler/: auth.go  auth_test.go  context.go  handler.go  merchant.go  merchant_test.go  settlement_destination.go  settlement_destination_test.go
internal/cache/: cache.go
internal/config/: config.go
internal/datastore/: id.go  merchant.go  models.go  network.go  settlement_destination.go  store.go
internal/datastore/migrations/: 00001_initial_schema.sql
internal/docs/: docs.go  swagger.json  swagger.yaml
internal/helpers/: helpers.go
internal/mocks/: kms.go  oracle.go
internal/pricing/: fee.go  fee_test.go  price.go  price_test.go
internal/server/: middleware.go  server.go
internal/server/handlers/: auth.go  auth_test.go  context.go
internal/signer/: derivation.go  evm.go  infisical.go  infisical_test.go  signer.go  signer_test.go  solana.go
internal/testutil/: testutil.go
internal/testutil/fixtures/: merchant_configs.yml  merchants.yml  networks.yml  signers.yml
internal/util/: http.go  util.go
internal/worker/: deposit.go  expiry.go  webhook.go  worker.go
