[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json"] }
diesel-async = { version = "0.7", features = ["postgres", "bb8"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
nanoid = "0.4"

[workspace.lints.rust]
future-incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -2 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"

[profile.release]
lto = true
codegen-units = 1
