[package]
name = "kassi-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["time", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
kassi-db = { path = "../kassi-db" }
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
