[package]
name = "kassi-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
kassi-db = { path = "../kassi-db" }

bb8 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
diesel = { workspace = true }
diesel-async = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { version = "1", features = ["time", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
