[package]
name = "kassi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kassi-db = { path = "../kassi-db" }
kassi-types = { path = "../kassi-types" }

axum = "0.8"
chrono = "0.4"
envy = "0.4"
serde = { workspace = true }
serde_json = "1"
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
