[package]
name = "kassi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kassi-db = { path = "../kassi-db" }
kassi-signer = { path = "../kassi-signer" }
kassi-tokens = { path = "../kassi-tokens" }
kassi-types = { path = "../kassi-types" }

alloy = { version = "1", features = ["k256", "signers"] }
axum = "0.8"
base64 = "0.22"
bs58 = "0.5"
chrono = "0.4"
ed25519-dalek = { version = "2", features = ["std"] }
envy = "0.4"
jsonwebtoken = "9"
nanoid = { workspace = true }
rust_decimal = "1"
serde = { workspace = true }
serde_json = "1"
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
alloy = { version = "1", features = ["k256"] }
base64 = "0.22"
http-body-util = "0.1"
hyper = "1"
k256 = { version = "0.13", features = ["ecdsa"] }
kassi-signer = { path = "../kassi-signer", features = ["test-utils"] }
nanoid = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
