[package]
name = "kassi-signer"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
alloy = { version = "=1.0.41", features = [
    "consensus",
    "eips",
    "k256",
    "network",
    "signers",
    "signer-local",
    "rpc-types-eth",
    "sol-types",
] }
base64 = "0.22"
bip32 = "0.5"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
solana-keypair = "2"
solana-message = "2"
solana-pubkey = "2"
solana-signer = "2"
solana-transaction = { version = "2", features = ["bincode", "verify"] }
reqwest = { version = "0.12", features = ["json"] }
secrecy = "0.10"
tokio = { version = "1", features = ["sync"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
solana-hash = "2"
solana-signature = "2"
solana-system-interface = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
