[package]
name = "kassi-tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
